package wedding;

public enum InvitationFormat {
    DIGITAL,
    PRINTED
}